# progammiersprachen2020-aufgabenblatt4-new

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  aufgabe_10.cpp  aufgabe_11.cpp  aufgabe_12.cpp  aufgabe_2_und_3.cpp  aufgabe_5.cpp  aufgabe_6.cpp  aufgabe_8.cpp  circle.cpp  circle.hpp  example.cpp  tests.cpp
